<resources>
    <!--App-->
    <string name="app_name">Visual Control Application</string>
    <string name="action_logout">Log out</string>

    <!--LoginActivity-->
    <string name="login_btn">Login</string>
    <string name="password">Password</string>
    <string name="login_name">login</string>

    <!--MainActivity-->
    <string name="exit_alert_title">Exit</string>
    <string name="exit_alert_messege">Do you want to exit?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="login_label">Login:</string>
    <string name="localization_label">Localization:</string>
    <string name="name_label">Name:</string>
    <string name="comment_edit">Comment:</string>
    <string name="location_btn">Get location</string>
    <string name="image_label">Photo:</string>
    <string name="make_photo_btn">Capture photo</string>
    <string name="spinner_chain_label">Chain store:</string>
    <string name="spinner_chain_title">Chain store</string>
    <string name="spinner_store_label">Store:</string>
    <string name="spinner_store_title">Store</string>
    <string name="spinner_shelf_label">Shelf amount:</string>
    <string name="spinner_shelf_title">Shelf amount</string>
    <string name="spinner_agreement_label">Agreement:</string>
    <string name="spinner_agreement_title">Agreement</string>
</resources>
