<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.savch.dypproj.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="79dp"
        android:layout_marginTop="30dp"
        android:text="@string/login_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/localization_label"
        app:layout_constraintRight_toRightOf="@+id/textName"
        app:layout_constraintTop_toBottomOf="@+id/textName"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textLoginCh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="@+id/textLogin"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="40dp"
        app:layout_constraintLeft_toRightOf="@+id/textLogin" />

    <TextView
        android:id="@+id/textNameCh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="0dp"
        android:text=""
        app:layout_constraintLeft_toRightOf="@+id/textName"
        app:layout_constraintTop_toTopOf="@+id/textName"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textLocalCh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="0dp"
        android:text=""
        app:layout_constraintLeft_toRightOf="@+id/textLocal"
        app:layout_constraintTop_toTopOf="@+id/textLocal"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/comment_edit"
        app:layout_constraintRight_toRightOf="@+id/textLocal"
        app:layout_constraintTop_toBottomOf="@+id/textLocal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="46dp" />

    <EditText
        android:id="@+id/textCommentEdit"
        android:layout_width="106dp"
        android:layout_height="38dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintLeft_toRightOf="@+id/textComment"
        android:layout_marginLeft="40dp"
        app:layout_constraintTop_toTopOf="@+id/textComment"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="-4dp"
        android:layout_marginTop="20dp"
        android:text="@string/name_label"
        app:layout_constraintRight_toRightOf="@+id/textLogin"
        app:layout_constraintTop_toBottomOf="@+id/textLogin" />

    <Button
        android:id="@+id/loc_button"
        android:layout_width="72dp"
        android:layout_height="36dp"
        android:text="@string/location_btn"
        android:layout_marginRight="43dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="146dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_label"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toBottomOf="@+id/textShelf"
        android:layout_marginRight="-2dp"
        app:layout_constraintRight_toRightOf="@+id/textShelf" />

    <ImageView
        android:id="@+id/photoView"
        android:layout_width="78dp"
        android:layout_height="74dp"
        app:srcCompat="@drawable/android_gallery_animation_by_maximilian_keppeler"
        app:layout_constraintLeft_toRightOf="@+id/textImage"
        android:layout_marginLeft="40dp"
        app:layout_constraintTop_toTopOf="@+id/textImage"
        android:layout_marginTop="0dp" />


    <TextView
        android:id="@+id/textAgreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spinner_agreement_label"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@+id/textComment"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/textComment" />

    <Spinner
        android:id="@+id/spinner_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="0dp"
        android:background="@color/iron"
        android:prompt="@string/spinner_agreement_title"
        app:layout_constraintLeft_toRightOf="@+id/textAgreement"
        app:layout_constraintTop_toTopOf="@+id/textAgreement" />






    <TextView
        android:id="@+id/textChain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spinner_chain_label"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/textAgreement"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/textAgreement" />

    <Spinner
        android:id="@+id/spinner_chain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="0dp"
        android:background="@color/iron"
        android:prompt="@string/spinner_chain_title"
        app:layout_constraintLeft_toRightOf="@+id/textChain"
        app:layout_constraintTop_toTopOf="@+id/textChain" />

    <TextView
        android:id="@+id/textStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spinner_store_label"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/textChain"
        android:layout_marginRight="1dp"
        app:layout_constraintRight_toRightOf="@+id/textChain" />

    <Spinner
        android:id="@+id/spinner_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="0dp"
        android:background="@color/iron"
        android:prompt="@string/spinner_store_title"
        app:layout_constraintLeft_toRightOf="@+id/textStore"
        app:layout_constraintTop_toTopOf="@+id/textStore" />

    <TextView
        android:id="@+id/textShelf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spinner_shelf_label"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/textStore"
        android:layout_marginRight="-15dp"
        app:layout_constraintRight_toRightOf="@+id/textStore" />

    <Spinner
        android:id="@+id/spinner_shelf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="-1dp"
        android:background="@color/iron"
        android:prompt="@string/spinner_shelf_title"
        app:layout_constraintLeft_toRightOf="@+id/textShelf"
        app:layout_constraintTop_toTopOf="@+id/textShelf" />

    <Button
        android:id="@+id/photo_btn"
        android:layout_width="92dp"
        android:layout_height="53dp"
        android:text="@string/make_photo_btn"
        tools:ignore="MissingConstraints"
        app:layout_constraintLeft_toRightOf="@+id/photoView"
        android:layout_marginLeft="31dp"
        app:layout_constraintBottom_toBottomOf="@+id/photoView"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.134" />


</android.support.constraint.ConstraintLayout>
